# supi-cli

./: AGENT.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  bonnie.toml
agent/: BIG_PICTURE_PLAN.md  PROGRESS.md  bonnie.toml-reference.md
agent/actions/: log_progress.md  writing_integration_tests.md
history/: 2025-10-25_BUGFIX_process_group_cleanup.md  2025-10-25_INITIAL_IMPLEMENTATION.md
src/: cli.rs  hotkey.rs  input.rs  main.rs  output.rs  process.rs  signals.rs  supervisor.rs
tests/: cli_bugfix_tests.rs  cli_phase1_tests.rs  cli_phase2_tests.rs  cli_phase3_tests.rs  cli_phase4_tests.rs  cli_phase5_tests.rs  cli_tests.rs  phase1_tests.rs  phase2_tests.rs  phase3_tests.rs  phase4_tests.rs  phase5_tests.rs  test_utils.rs
