[package]
    name        = "supi-cli"
    version     = "0.1.0"
    edition     = "2024"
    license     = "MIT OR Apache-2.0"
    authors     = ["bjesuiter"]
    description = "A simple process supervisor for spawning and managing arbitrary commands"
    repository  = "https://github.com/bjesuiter/supi-cli"
    keywords    = ["supervisor", "process", "cli", "restart", "development"]
    categories  = ["command-line-utilities", "development-tools"]

[dependencies]
    clap              = { version = "4.5", features = ["derive"] }
    tokio             = { version = "1.40", features = ["full"] }
    tokio-util        = { version = "0.7", features = ["io"] }
    crossterm         = { version = "0.28", features = ["event-stream"] }
    anyhow            = "1.0"
    signal-hook       = "0.3"
    signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
    futures           = "0.3"
    nix               = { version = "0.29", features = ["signal"] }

[dev-dependencies]
    assert_cmd   = "2.0"
    predicates   = "3.0"
    tempfile     = "3.8"
    libc         = "0.2"
    portable-pty = "0.8"
